# wsdatautil

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py  test.html  test.py
.github/workflows/: release.yml
src/wsdatautil/: __init__.py  _wsframecoder.c  _wsframecoder.pyi
